fixed website scrollbar

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -11,7 +11,13 @@ body {
 	margin: 0;
 	padding: 0;
 	background-color: #121214;
-	overflow-x: hidden;
+	overflow: hidden;
+}
+
+main {
+	overflow: scroll;
+	height: 100vh;
+	padding-bottom: 7%;
 }
 
 header {
@@ -55,7 +61,6 @@ section {
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-	padding: 30;
 }
 
 button {
