--- a/app/styles/landing.module.css
+++ b/app/styles/landing.module.css
@@ -1,10 +1,10 @@
 .above_the_fold {
-	height: 88%;
+	height: 100%;
 }
 
 .below_the_fold {
 	height: 100vh;
-	padding: 50;
+	padding: 50px;
 	background-color: #1a1d1e;
 }
 
